applications/hibernate-reactive-panache-quickstart/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ormdemo
  labels:
    app: ormdemo
    service: ormdemo
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: ormdemo
