applications/hibernate-reactive-panache-quickstart/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ormdemo
  labels:
    app: ormdemo
    service: ormdemo
spec:
  to:
    kind: Service
    name: ormdemo
  tls: null
  port:
    targetPort: http
